--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,24 @@ h2 {
     display: block;
     background: white;
     padding: 15px 20px;
-    border-radius: 4px;
+    border-radius: 8px;
     text-decoration: none;
-    color: rgb(54,77,204);
-    font-weight: bold;
-    box-shadow: 0 0 20px white;  
+    color: black;
+    font-weight: bold; 
 }
 
 .links-list li a span {
     color: grey;
     display: block;
     margin-top: 10px;
+    font-size: 14px;
+}
+
+.links-list li a.active {
+    box-shadow: 0 0 20px white;
+    color: rgb(54,77,204);
+}
+
+.links-list.second {
+    margin-top: 30px;
 }
